Updating for collab

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,8 +11,7 @@
     "\n",
     "import dl_project\n",
     "from omegaconf import OmegaConf\n",
-    "import os\n",
-    "os.chdir(\"../\")"
+    "import os"
    ]
   },
   {
@@ -44,7 +43,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
